[package]
name = "website"
version = "0.1.0"
authors = ["Noah Braunfeld <noahbraunfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
askama = "0.9"
# tokio-postgres = "0.5"
# postgres = "0.1"
